07 Jul 2003 ECPS:VM config Statement and EVM panel command retired.
            both replaced with ECPSVM - Ivan Warren
07 Jul 2003 #undef OPTION_DYNAMIC_LOAD in featall.h if neither dlopen
            nor libtool is available - Fish
06 Jul 2003 LXR,LZER,LZDR,LZXR instructions - Roger Bowler
04 Jul 2003 Allow NUMCPU=0 - Jan Jaeger
03 Jul 2003 Long Displacement Facility - Roger Bowler
30 Jun 2003 Display all messages on shutdown - Jan Jaeger
30 Jun 2003 Removed incorrect locks in console attach/detach - Jan Jaeger
29 Jun 2003 Added shutdown logic - Jan Jaeger
28 Jun 2003 Fix "console: select: Bad file number" - Fish
28 Jun 2003 Updated hercinst.html with panel command info - Fish
28 Jun 2003 Loadable crypto support (US export regulations) - Jan Jaeger
27 Jun 2003 Allow unload reject in hdl final processing - Jan Jaeger
27 Jun 2003 Support dynamic loadable cgi routines - Jan Jaeger
27 Jun 2003 Panel.c + hsccmd.c: clear/reset screen before exiting - Fish
27 Jun 2003 Panel.c: 1) removed all external-gui logic, 2) long
            messages now wrap to the next screen line - Fish
27 Jun 2003 Fixed some "integer constant is too large for "long" type"
            warnings - Fish
27 Jun 2003 Added addt'l instructions/info to autogen.sh - Fish
27 Jun 2003 Added README.HDL to EXTRA_DIST in makefile.am - Fish
27 Jun 2003 Updated makefile.am to add Windows resource definitions
            to dyngui.dll - Fish
27 Jun 2003 Framework for ALS4 features - Roger Bowler
26 Jun 2003 Check for physical shared object when loading dll - Jan Jaeger
26 Jun 2003 Fix Win32 hdl case-sensitivity bug - Fish
26 Jun 2003 TT32 CTCI fixes: 1) fix ACCESS_VIOLATION caused by NULL ptr
            being returned by 'tt32_get_default_iface', 2) 'tt32stats_cmd'
            temporarily fixed by fixing bug in 'CTCI_Init' and adding temp
            workaround code to 'display_tt32_stats' function to work around
            bug in TunTap32.dll, 3) add some code to try and resolve bogus